Add complete between views functionality

--- a/todo-list/views/list.ejs
+++ b/todo-list/views/list.ejs
@@ -12,7 +12,7 @@
           id="todo"
           placeholder="Add item"
         />
-        <button type="submit" name="list" value="<%= page %>">+</button>
+        <button id="submit_btn" type="submit" name="list" value="<%= page %>">+</button>
       </form>
       <div class="items-container">
         <% liItem.forEach((item)=>{ %>
@@ -21,5 +21,6 @@
         <!-- form -->
       </div>
     </div>
+    <!-- <script src="js/index.js"></script> -->
  <%- include ('footer'); %> 
  
