--- a/todo-list/views/about.ejs
+++ b/todo-list/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include('header'); %> 
+<%- include ('/partials/header'); %> 
 <h2>About Page</h2>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate deserunt laborum atque architecto doloribus doloremque quis aut voluptas ullam voluptatem harum quam cum vel repellat soluta, vitae labore quasi quod odio rem iusto. Eaque magni architecto odio praesentium consequatur, enim perspiciatis ipsum velit quod. Quam voluptas corrupti ipsa ducimus corporis! Consequuntur ullam dignissimos ex in nemo commodi dolorem illum quibusdam temporibus eum. Quas quisquam at sint atque accusamus temporibus ut.</p>
-<%- include('footer');  %> 
+ <%- include ('/partials/footer'); %> 
