--- a/todo-list/views/list.ejs
+++ b/todo-list/views/list.ejs
@@ -1,4 +1,4 @@
-<%- include('header');  %> 
+<%- include('/partials/header');  %> 
     <div class="box" id="heading">
       <h1>ToDo List Web Application</h1>
       <h6><%= page %></h6>
@@ -22,5 +22,5 @@
       </div>
     </div>
     <!-- <script src="js/index.js"></script> -->
- <%- include ('footer'); %> 
+ <%- include ('/partials/footer'); %> 
  
