backend DB functionality..

--- a/todo-list/views/list.ejs
+++ b/todo-list/views/list.ejs
@@ -16,7 +16,7 @@
       </form>
       <div class="items-container">
         <% liItem.forEach((item)=>{ %>
-        <div class="item"><p><%= item.name %></p></div>
+        <div class="item"><p><%= item.name %></p> <input class='dlt-btn' type='submit' value="delete" />  </div>
         <% }) %>
         <!-- form -->
       </div>
