--- a/todo-list/public/css/style.css
+++ b/todo-list/public/css/style.css
@@ -30,6 +30,7 @@ h6 {
 .item {
   min-height: 70px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #f1f1f1;
 }
@@ -70,6 +71,9 @@ button {
   font-size: 30px;
   padding-bottom: 6px;
   border-width: 0;
+}
+.dlt-btn{
+  margin-right: 15px;
 }
 
 input[type='text'] {
