--- a/todo-list/public/css/style.css
+++ b/todo-list/public/css/style.css
@@ -56,12 +56,12 @@ p {
   color: #00204a;
 }
 
-form {
+form .item {
   text-align: center;
   margin-left: 20px;
 }
 
-button {
+button.submit_btn {
   min-height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -71,8 +71,9 @@ button {
   font-size: 30px;
   padding-bottom: 6px;
   border-width: 0;
+  margin-right: 15px;
 }
-.dlt-btn{
+.dlt_btn{
   margin-right: 15px;
 }
 
