--- a/todo-list/views/list.ejs
+++ b/todo-list/views/list.ejs
@@ -17,9 +17,10 @@
       <div class="items-container">
         <% liItem.forEach((item)=>{ %>
           <form action="/delete" method="post">
-            <div class="item"><p>
-              <%= item.name %></p>
-              <input type="checkbox" onChange="this.form.submit()" class='dlt_btn' name='dlt_btn'  value="<%= item._id%>">
+            <div class="item">
+              <p><%= item.name %></p>
+              <input type="text" class="pppp" name="page" value="<%= page %>" id="">
+              <input type="checkbox" onChange="this.form.submit()" class="dlt_btn"  name="dlt_btnID"      value="<%= item._id%>">
             </div>
           </form>
         <% }) %>
